2006-10-29	fabian
	
	* Allowing users to specify parameters in bookmarks' command. For example, if the command is
	  ssh $$User Name$$@myserver.com, when you start this session, iTerm will ask you to enter
	  the "User Name", then plug your input into the command and run the session.
	* Release 0.9.2
	  
2006-10-26	fabian

	* Added a visual to indicate whether "send to all session" is turned on or not.
	* Improved About dialog.
	* Added Edit button for keymapping settings.
	* Changed cmd-click to open URL behavior: now http:// is no longer added unless the URL doesn't
	  explicitly have a scheme prefix.
	
2006-10-25	fabian

	* Added a semaphore in PTYSession's read thread to avoid the loss of data when the session ends.
	* Replaced two launch buttons in bookmarks window with a segmented control.
	* Cleaned some of the notification code. Now notifications will only be processed if it's from
	  the front session or window.
	* Icons updated.
	* Fixed a bug in [VT100Screen resizeWidth:Height] that might be the source of many crashes.
	* Added ability to parse URL for URL handlers. The following macros can be used in handler's command:
		$$URL$$, $$HOST$$, $$USER$$, $$PASSWORD$$, $$PORT$$, $$PATH$$
	  For example, a bookmark's command is: telnet -l $$USER$$ $$HOST$$ $$PORT$$, and the
	  URL is: telnet://joe@fancyland.com:23
	  This will give you this command: telnet -l joe fancyland.com 23
	  The URL will no longer be passed to a session by default, unless you specify one of those 6 macros
	  in your command line.
	* Now iTerm offers to become the default handler when you connect a URL scheme to a session. No undo.
	
2006-10-24	fabian

	* Changed default stroke width to a less bold look.
	* Allow using ESC to close preferences, profiles and bookmarks windows.
	* Added support for the escape sequences of show/hide cursor: ESC [ ? 25 h/l
	* Fixed crashes if no preferences file is found.
	* Fixed crashes when initial font settings are wrong.
	
2006-10-23	fabian
