@@ -42,6 +42,8 @@
 	<string>SCR-8B63DF54C9</string>
     <key>SUFeedURL</key> 
     <string>http://iterm.sourceforge.net/appcast.xml</string>
+    <key>SUFeedURLForPanther</key> 
+    <string>http://iterm.sourceforge.net/appcast_panther.xml</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
