@@ -1,0 +1,16 @@
+<?xml version="1.0" encoding="utf-8"?>
+<rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:sparkle="http:// 
+www.andymatuschak.org/xml-namespaces/sparkle">
+    <channel>
+        <title>Some App Changelog</title>
+        <link>http://iterm.sourceforge.net/appcast_panther.xml</link>
+        <description>Most recent changes with links to updates.</description>
+        <language>en</language>
+        <item>
+            <title>Version 0.9.2</title>
+            <description>http://iterm.sourceforge.net/Changelog.html</description>
+            <pubDate>Mon, 30 Oct 2006 11:59:11 +0000</pubDate>   
+            <enclosure url="http://osdn.dl.sourceforge.net/sourceforge/iterm/iTerm_Panther_0.9.2.dmg" length="3368411" type="application/octet-stream"/>
+        </item>
+    </channel>
+</rss>
