@@ -66,8 +66,7 @@
 <FONT SIZE="5"><STRONG>News</STRONG></FONT><BR><BR>
 <STRONG>Release 0.9.2</STRONG> 10/29/06<BR>
 This new release features a new preference system. It is based on the same "Profiles-oriented" idea of
-previous version, with enhancement targeted toward the user experiences. We have the Tiger version available
-right now, with Panther version coming soon. The new changes include:<BR>
+previous version, with enhancement targeted toward the user experiences. The new changes include:<BR>
 <UL>
 <LI>A Change of preferences settings:<br>
     <UL>
